# cloakcraft

./: .alt-config.json  .gitignore  .vercelignore  ADDRESS_LOOKUP_TABLES.md  Anchor.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.lock.handcraft  Cargo.toml  DEPLOYMENT_READY.md  FIXED_0x66_ERROR.md  README.md  SECURITY_ANALYSIS.md  TESTING_STATUS.md  VERSIONED_TRANSACTIONS.md  cloakcraft-design.docx  deploy-final.sh  deploy-with-long-wait.sh  deploy.sh  json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-phantom-wallet.html  tsconfig.json  turbo.json  vercel.json
indexer/: Cargo.toml
indexer/migrations/: 20240101000000_initial.sql
indexer/src/: config.rs  database.rs  events.rs  lib.rs  rpc.rs
programs/cloakcraft/: Cargo.toml
programs/cloakcraft/src/: constants.rs  errors.rs  events.rs  lib.rs  pyth.rs
programs/cloakcraft/src/cpi/: mod.rs
programs/cloakcraft/src/crypto/: babyjubjub.rs  mod.rs
programs/cloakcraft/src/helpers/: amm_math.rs  commitment.rs  field.rs  mod.rs  proof.rs  vault.rs
programs/cloakcraft/src/instructions/: mod.rs
programs/cloakcraft/src/instructions/adapter/: mod.rs  transact_adapt.rs
programs/cloakcraft/src/instructions/admin/: append_verification_key_data.rs  disable_adapt_module.rs  initialize_protocol_config.rs  mod.rs  register_adapt_module.rs  register_threshold_committee.rs  register_verification_key.rs  reset_amm_pool.rs  set_verification_key_data.rs  test_verify_proof.rs  update_protocol_authority.rs  update_protocol_fees.rs  update_treasury.rs
programs/cloakcraft/src/instructions/generic/: close_pending_operation.rs  create_commitment.rs  create_nullifier.rs  create_nullifier_and_pending.rs  mod.rs  verify_commitment_exists.rs
programs/cloakcraft/src/instructions/governance/: create_aggregation.rs  finalize_decryption.rs  mod.rs  submit_decryption_share.rs  submit_encrypted.rs
programs/cloakcraft/src/instructions/market/: cancel_order.rs  create_order.rs  fill_order.rs  mod.rs
programs/cloakcraft/src/instructions/perps/: mod.rs
programs/cloakcraft/src/instructions/pool/: create_pending_with_proof.rs  create_pending_with_proof_consolidation.rs  initialize_commitment_counter.rs  initialize_pool.rs  mod.rs  process_unshield.rs  shield.rs  store_commitment.rs  transact.rs  verify_proof_for_transact.rs
programs/cloakcraft/src/instructions/swap/: add_liquidity.rs  create_pending_with_proof_add_liquidity.rs  create_pending_with_proof_remove_liquidity.rs  create_pending_with_proof_swap.rs  execute_add_liquidity.rs  execute_remove_liquidity.rs  execute_swap.rs  initialize_amm_pool.rs  mod.rs  remove_liquidity.rs  swap.rs
programs/cloakcraft/src/light_cpi/: mod.rs
programs/cloakcraft/src/merkle/: mod.rs
programs/cloakcraft/src/state/: adapt_module.rs  aggregation.rs  amm_pool.rs  ballot.rs  commitment.rs  committee.rs  light_types.rs  mod.rs  nullifier.rs  order.rs  pending_operation.rs  perps_market.rs  perps_pool.rs  pool.rs  position_meta.rs  protocol_config.rs  verification_key.rs
(+332 files in other folders)
