[workspace]
resolver = "2"
members = [
    "programs/cloakcraft",
]
exclude = [
    "indexer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/guildcraft/cloakcraft"

[workspace.dependencies]
# Anchor 0.32.1
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

# Light Protocol (ZK Compression)
light-sdk = { version = "0.17.1", features = ["anchor"] }
light-hasher = { version = "5.0.0", features = ["poseidon"] }
light-compressed-account = "0.7.0"

# Solana 2.x
solana-sdk = "2.1"
solana-client = "2.1"
solana-bn254 = "2.2"
solana-sha256-hasher = "2.1"
solana-keccak-hasher = "2.1"

# Groth16 verifier (Light Protocol - for snarkjs/circom proofs)
groth16-solana = "0.2.0"

# Pyth Oracle
pyth-solana-receiver-sdk = "1.1.0"

# Async
tokio = { version = "1.35", features = ["full"] }

# Serialization
borsh = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

