[package]
name = "cloakcraft-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Solana
solana-sdk = { workspace = true }
solana-client = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
borsh = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }

# Web
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# Utilities
hex = "0.4"
